; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/macintosh/extr_adbhid.c_init_ms_a3.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/macintosh/extr_adbhid.c_init_ms_a3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.adb_request = type { i32 }

@.str = private unnamed_addr constant [41 x i8] c" (Mouse Systems A3 Mouse, or compatible)\00", align 1
@ADBREQ_SYNC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @init_ms_a3 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_ms_a3(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.adb_request, align 4
  store i32 %0, i32* %2, align 4
  %4 = call i32 @printk(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0))
  %5 = load i32, i32* @ADBREQ_SYNC, align 4
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @ADB_WRITEREG(i32 %6, i32 2)
  %8 = call i32 (%struct.adb_request*, i32*, i32, i32, i32, ...) @adb_request(%struct.adb_request* %3, i32* null, i32 %5, i32 3, i32 %7, i32 0, i32 7)
  %9 = load i32, i32* @ADBREQ_SYNC, align 4
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @ADB_FLUSH(i32 %10)
  %12 = call i32 (%struct.adb_request*, i32*, i32, i32, i32, ...) @adb_request(%struct.adb_request* %3, i32* null, i32 %9, i32 1, i32 %11)
  ret void
}

declare dso_local i32 @printk(i8*) #1

declare dso_local i32 @adb_request(%struct.adb_request*, i32*, i32, i32, i32, ...) #1

declare dso_local i32 @ADB_WRITEREG(i32, i32) #1

declare dso_local i32 @ADB_FLUSH(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
